poprawki cssa, dodanie modal do poradni

--- a/public/scss/components/_all.scss
+++ b/public/scss/components/_all.scss
@@ -6,3 +6,8 @@
 @import 'links';
 @import 'modal';
 @import 'selects';
+@import 'cards';
+@import 'buttons';
+@import 'filters';
+@import 'summary';
+@import 'boxes';
