--- a/public/scss/modules/_colors.scss
+++ b/public/scss/modules/_colors.scss
@@ -1,6 +1,13 @@
 $white: #FFFFFF;
-$grey: #e7e7e7;
-$light-grey: #e9e9e9;
+$grey: #dddddd;
+$light-grey: #f0f0f0;
 $black: #353535;
 $primary-color: #284B63;
+$primary-color-dk: #1b3342;
+$primary-color-lt: #d9dee3;
 $secondary-color: #3C6E71;
+$secondary-color-lt: #bccdcd;
+$secondary-color-dk: #2d5355;
+$red: #e40000;
+$red-dk: #941809;
+$light-red: #ffe3e3;
