--- a/templates/admin_panel/doctor/index.html.twig
+++ b/templates/admin_panel/doctor/index.html.twig
@@ -8,6 +8,7 @@
             </div>
         {% endfor %}
     {% endfor %}
+<div class="container admin">
     <h1>Lekarze</h1>
     <table class="admin-table">
         <tr>
@@ -35,5 +36,5 @@
     {% endfor %}
     </table>
     <a class="link" href="{{ path('admin.doctor_add') }}">Dodaj lekarza</a>
-
+</div>
 {% endblock %}
