--- a/templates/admin_panel/users/_form.html.twig
+++ b/templates/admin_panel/users/_form.html.twig
@@ -45,4 +45,5 @@
     </div>
 
     <button class="form-btn">Zatwierdź</button>
+    <a class="link-as-btn cancel" href="{{ path('admin.users') }}">Rezygnuj</a>
     {{ form_end(form) }}
