--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,10 @@ h3 {
   font-size: 2rem;
 }
 
+h4 {
+  font-size: 1.5rem;
+}
+
 /* -------------------- FULL CALENDAR -------------- */
 .fc-nonbusiness.fc-bgevent {
   background-color: red;
@@ -388,12 +392,12 @@ template {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #353535;
   min-width: 100%;
 }
 
 .navbar-li {
-  float: right;
+  float: left;
 }
 
 .navbar-li.left {
@@ -410,8 +414,12 @@ template {
   transition: background 0.5s, border-color 0.5s, color 0.5s;
 }
 
+.navbar-li a.active {
+  background: #3C6E71;
+}
+
 .navbar-li a:hover {
-  background-color: dodgerblue;
+  background-color: #3C6E71;
 }
 
 body {
@@ -419,6 +427,7 @@ body {
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  background: #d9dee3;
 }
 
 /* ---------------- MAIN CONTAINER ----------------- */
@@ -426,58 +435,40 @@ body {
   width: 90%;
   padding: .1em;
   margin: 0 auto;
+  margin-top: 3em;
+  margin-bottom: 3em;
+  background: #FFFFFF;
+  padding: 2em;
+  border-radius: .3em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 @media screen and (min-width: 1000px) {
   .container {
-    width: 40%;
+    width: 60%;
+  }
+  .container.registration-form {
+    width: 30%;
+  }
+  .container.login-form {
+    width: 30%;
+  }
+  .container.form {
+    width: 35%;
+  }
+  .container.default {
+    width: 100%;
+  }
+  .container.admin {
+    width: 99%;
   }
 }
 
-/* ------------------ CLINICS CONTAINER ---------- */
-.clinics-container {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  -ms-grid-rows: 0.5fr;
-      grid-template-rows: 0.5fr;
-  gap: 2em 2em;
-      grid-template-areas: ".";
+table {
+  margin-bottom: 1em;
 }
 
-.clinic-card {
-  background-color: #EAEAEA;
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  /* border-radius: 5px; */
-  -webkit-transition: background 0.5s, border-color 0.5s, color 0.5s;
-  transition: background 0.5s, border-color 0.5s, color 0.5s;
-}
-
-.clinic-card:hover {
-  background-color: #c9c9c9;
-  cursor: pointer;
-}
-
-/*.clinic-item--title {*/
-/*    font*/
-/*}*/
-.clinic-item {
-  padding: 15px 15px;
-}
-
-.clinic-item > ul {
-  list-style-type: none;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.clinic-item:hover > h3 {
-  color: darkblue;
-}
-
-/* ---------- ADMIN TABLE -------------- */
 .table-div {
   overflow-x: auto;
 }
@@ -549,12 +540,6 @@ body {
   border-bottom: 1px solid #ddd;
 }
 
-.profile-table td a {
-  display: block;
-  text-decoration: none;
-  color: black;
-}
-
 .profile-table .delete {
   color: red;
 }
@@ -586,7 +571,7 @@ body {
 }
 
 .flash-info {
-  padding: 5px 15px;
+  padding: .5em 1em;
   background: #d5e7ff;
 }
 
@@ -597,14 +582,13 @@ body {
   top: 0;
   left: 0;
   z-index: 1;
-  background-color: #111;
+  background-color: #353535;
   overflow-x: hidden;
   padding-top: 3em;
   -webkit-transition: 0.7s;
   transition: 0.7s;
 }
 
-/* The navigation menu links */
 .sidebar a {
   padding: 1em;
   text-decoration: none;
@@ -614,9 +598,13 @@ body {
 }
 
 .sidebar a:hover {
-  background-color: dodgerblue;
+  background-color: #3C6E71;
   -webkit-transition: background 0.5s, border-color 0.5s, color 0.5s;
   transition: background 0.5s, border-color 0.5s, color 0.5s;
+}
+
+.sidebar a.active {
+  background-color: #3C6E71;
 }
 
 .sidebar .close {
@@ -625,13 +613,9 @@ body {
   right: 22px;
 }
 
-.active {
-  background-color: dodgerblue;
-}
-
 .content {
   margin-left: 250px;
-  padding: 20px;
+  padding: 2.5em;
   -webkit-transition: margin-left .7s;
   transition: margin-left .7s;
 }
@@ -652,7 +636,7 @@ body {
   width: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background: #e9e9e9;
+  background: #f0f0f0;
   border: 1px solid transparent;
   border-radius: .5em;
   padding: .8em;
@@ -662,19 +646,25 @@ body {
 
 .form-item-col input:focus {
   background: #FFFFFF;
-  border: 1px solid #e7e7e7;
+  border: 1px solid #284B63;
 }
 
-.form-item-col .form-input select {
-  margin-left: .3em;
+.form-item-col.checkbox label {
+  display: inline-block;
+  padding-left: .3em;
+  text-indent: -.2em;
 }
 
-.form-item-col .form-input select:first-child {
-  margin-left: 0;
+.form-item-col.checkbox input {
+  width: 13px;
+  height: 13px;
+  padding: 0;
+  margin: 0;
+  top: -1px;
 }
 
 .form-subtitle {
-  border-bottom: 1px solid #e7e7e7;
+  border-bottom: 1px solid #dddddd;
   margin-bottom: 1em;
 }
 
@@ -682,15 +672,49 @@ body {
   margin-bottom: .3em;
 }
 
-.link {
-  text-decoration: none;
-  color: dodgerblue;
+.form-error {
+  margin-top: 0;
+  margin-bottom: 1em;
+  color: red;
 }
 
-.link:hover {
+.form-error ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.form-error ul li {
+  font-size: .9rem;
+}
+
+@media screen and (min-width: 1000px) {
+  .form-item-row .form-item-col {
+    display: inline-block;
+  }
+  .name {
+    width: 50%;
+  }
+  .last-name {
+    width: 49%;
+  }
+  .city {
+    width: 65%;
+  }
+  .post-code {
+    width: 34%;
+  }
+}
+
+.link, .btn-as-link {
+  text-decoration: none;
+  color: #284B63;
+}
+
+.link:hover, .btn-as-link:hover {
   -webkit-transition: 0.5s;
   transition: 0.5s;
-  color: darkblue;
+  color: #1b3342;
 }
 
 .link-green {
@@ -705,23 +729,17 @@ body {
 }
 
 .link-btn {
-  font-weight: 600;
+  color: #FFFFFF !important;
   text-decoration: none;
-  font-size: 1.1em;
-  padding: 10px 16px;
-  margin: 10px 0;
-  width: 200px;
-  color: white;
-  background: #1E90FF;
-  border: 2px solid #1873cc;
-  cursor: pointer;
-  outline: none;
-  -webkit-transition: background 0.5s, border-color 0.5s, color 0.5s;
-  transition: background 0.5s, border-color 0.5s, color 0.5s;
+  opacity: 1;
+  -webkit-transition: opacity .25s;
+  transition: opacity .25s;
 }
 
-.link-btn:hover {
-  background: #1873cc;
+.fade {
+  opacity: 0;
+  -webkit-transition: opacity .25s;
+  transition: opacity .25s;
 }
 
 .modal {
@@ -772,16 +790,248 @@ body {
 }
 
 select {
+  --webkit-apperance: none;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  background: #e9e9e9;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: pointer;
+  line-height: inherit;
+  background: #f0f0f0;
   border: none;
   padding: .8em;
   border-radius: .5em;
 }
 
-select::-ms-expand {
+select ::-ms-expand {
   display: none;
+}
+
+.form-input--select select {
+  margin-left: .3em;
+}
+
+.form-input--select select:first-child {
+  margin-left: 0;
+}
+
+.form-input--select.--error select {
+  background: #ffe3e3;
+}
+
+.form-input--select::after {
+  content: '<>';
+  position: absolute;
+  color: #333;
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+  right: 11px;
+  /*Adjust for position however you want*/
+  top: 18px;
+  padding: 0 0 2px;
+  border-bottom: 1px solid #999;
+  /*left line */
+  position: absolute;
+  pointer-events: none;
+}
+
+.form-input.form-input--error {
+  background: #ffe3e3;
+}
+
+.form-input--select.--error {
+  background: #ffe3e3;
+}
+
+/* ------------------ CLINICS CONTAINER ---------- */
+.clinics-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 0.5fr;
+      grid-template-rows: 0.5fr;
+  gap: 2em 2em;
+      grid-template-areas: ".";
+}
+
+.clinic-card {
+  background-color: #EAEAEA;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  /* border-radius: 5px; */
+  -webkit-transition: background 0.5s, border-color 0.5s, color 0.5s;
+  transition: background 0.5s, border-color 0.5s, color 0.5s;
+}
+
+.clinic-card:hover {
+  background-color: #c9c9c9;
+  cursor: pointer;
+}
+
+.clinic-card .clinic-item {
+  padding: 15px 15px;
+}
+
+.clinic-card .clinic-item h4 {
+  margin-bottom: .7em;
+  margin-top: .5em;
+}
+
+.clinic-card .clinic-item ul {
+  list-style-type: none;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+
+.clinic-card .clinic-item ul:hover h4 {
+  color: #1b3342;
+}
+
+.form-btn, .link-btn, .link-as-btn {
+  background: #284B63;
+  color: #FFFFFF;
+  border: none;
+  padding: 1em;
+  font-weight: 600;
+  -webkit-transition: background .25s;
+  transition: background .25s;
+  text-transform: uppercase;
+}
+
+.form-btn:hover, .link-btn:hover, .link-as-btn:hover {
+  cursor: pointer;
+  background: #1b3342;
+}
+
+#menu-click {
+  position: absolute;
+  top: 50%;
+  left: 0;
+}
+
+.btn-as-link {
+  background: none;
+  border: none;
+  font-weight: 600;
+  padding-left: 0;
+  cursor: pointer;
+}
+
+.link-as-btn {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.link-as-btn.cancel {
+  background: #e40000;
+}
+
+.link-as-btn.cancel:hover {
+  background: #941809;
+}
+
+.container-select {
+  margin-bottom: 1em;
+}
+
+.summary-container {
+  background: #FFFFFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.summary-container .summary-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (min-width: 1000px) {
+  .summary-container .summary-row {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+  }
+}
+
+.summary-container .summary-item {
+  margin: 1em;
+}
+
+.summary-container .summary-item h3 {
+  color: #1b3342;
+}
+
+.summary-container .summary-item span {
+  font-size: 1.5rem;
+}
+
+.summary-container form {
+  margin-top: 1em;
+}
+
+.admin-boxes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+@media screen and (min-width: 1000px) {
+  .admin-boxes {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+.box-item {
+  padding: 1em;
+  background: #FFFFFF;
+  margin: 1em;
+  border-radius: .3em;
+  -webkit-transition: background .25s;
+  transition: background .25s;
+  min-width: 200px;
+  max-width: 200px;
+  text-align: center;
+}
+
+.box-item a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.box-item:hover {
+  background: #bccdcd;
+  cursor: pointer;
+}
+
+.admin-boxes-title {
+  margin: 1em;
 }
 /*# sourceMappingURL=style.css.map */
