--- a/public/scss/components/_sidebar.scss
+++ b/public/scss/components/_sidebar.scss
@@ -5,32 +5,30 @@
     top: 0;
     left: 0;
     z-index: 1;
-    background-color: #111;
+    background-color: $black;
     overflow-x: hidden;
     padding-top: 3em;
     transition: 0.7s;
+    a {
+        padding: 1em;
+        text-decoration: none;
+        font-size: 1em;
+        color: #FFFFFF;
+        display: block;
+      &:hover  {
+        background-color: $secondary-color;
+        transition: background 0.5s, border-color 0.5s, color 0.5s;
+      }
+      &.active {
+        background-color: $secondary-color;
+      }
+
+    }
+
+  .close {
+      position: absolute;
+      top: 0;
+      right: 22px;
   }
 
-/* The navigation menu links */
-.sidebar a {
-    padding: 1em;
-    text-decoration: none;
-    font-size: 1em;
-    color: #FFFFFF;
-    display: block;
-  }
-  
-.sidebar a:hover {
-    background-color: dodgerblue;
-    transition: background 0.5s, border-color 0.5s, color 0.5s;
-}
-
-.sidebar .close {
-    position: absolute;
-    top: 0;
-    right: 22px;
-}
-
-.active {
-    background-color: dodgerblue;
 }
