--- a/public/scss/components/_tables.scss
+++ b/public/scss/components/_tables.scss
@@ -1,5 +1,7 @@
-/* ---------- ADMIN TABLE -------------- */
 
+table {
+    margin-bottom: 1em;
+}
 
 .table-div {
     overflow-x: auto;
@@ -80,12 +82,6 @@
 }
 
 
-.profile-table td a {
-    display: block;
-    text-decoration: none;
-    color: black;
-}
-
 .profile-table .delete {
     color: red;
 }
@@ -99,3 +95,4 @@
 
     color: dodgerblue;
 }
+
