--- a/public/scss/partials/_containers.scss
+++ b/public/scss/partials/_containers.scss
@@ -4,48 +4,34 @@
     width: 90%;
     padding: .1em;
     margin: 0 auto;
-
+    margin-top: 3em;
+    margin-bottom: 3em;
+    background: $white;
+    padding: 2em;
+    border-radius: .3em;
+    box-sizing: border-box;
     @include mq {
-        width: 40%;
+        width: 60%;
+
+        &.registration-form {
+            width: 30%;
+        }
+
+        &.login-form {
+            width: 30%;
+        }
+
+        &.form {
+            width: 35%;
+        }
+        &.default {
+            width: 100%;
+        }
+        &.admin {
+            width: 99%;
+        }
     }
 }
 
 
-
-    /* ------------------ CLINICS CONTAINER ---------- */
-
-.clinics-container{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr;
-    gap: 2em 2em;
-    grid-template-areas: ".";
-    
-}
-
-.clinic-card {
-    background-color: #EAEAEA;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    /* border-radius: 5px; */
-    transition: background 0.5s, border-color 0.5s, color 0.5s; 
-
-}
-.clinic-card:hover {
-    background-color: #c9c9c9;
-    cursor: pointer;
-}
-
-/*.clinic-item--title {*/
-/*    font*/
-/*}*/
-
-.clinic-item {
-    padding: 15px 15px;
-}
-.clinic-item > ul {
-    list-style-type: none;
-    transition: 0.5s;
-}
-.clinic-item:hover > h3{
-    color: darkblue;
-}
+  
