--- a/public/scss/partials/_navbar.scss
+++ b/public/scss/partials/_navbar.scss
@@ -1,4 +1,4 @@
-/* --------- NAVBAR ------------ */
+/* --------- NAVBAR ------------ */ //TODO: NAVBAR DO POPRAWY
 @media only screen and (min-width: 768px) {
     .navbar {
         list-style-type: none;
@@ -31,12 +31,12 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: $black;
     min-width: 100%;
 }
 
 .navbar-li {
-    float: right;
+    float: left;
 }
 .navbar-li.left{
     float: left;
@@ -49,9 +49,13 @@
     padding: 14px 16px;
     text-decoration: none;
     transition: background 0.5s, border-color 0.5s, color 0.5s;
+
+    &.active {
+        background: $secondary-color;
+    }
 }
 
 .navbar-li a:hover {
-    background-color: dodgerblue;
+    background-color: $secondary-color;
 }
 
