--- a/templates/admin_panel/doctor/add.html.twig
+++ b/templates/admin_panel/doctor/add.html.twig
@@ -1,6 +1,7 @@
 {% extends 'admin_panel/index.html.twig' %}
 
 {% block content %}
+<div class="container admin">
     {% for label, messages in app.flashes(['success', 'fail']) %}
         {% for message in messages %}
             <div class="flash-{{ label }}">
@@ -11,6 +12,6 @@
 
     <h1>Dodaj lekarza</h1>
     {{include('admin_panel/doctor/_form.html.twig')}}
-    
+</div>
 
 {% endblock %}
