--- a/templates/admin_panel/unit/_add.html.twig
+++ b/templates/admin_panel/unit/_add.html.twig
@@ -1,6 +1,7 @@
 {% extends 'admin_panel/index.html.twig' %}
 
 {% block content %}
+     <div class="container admin">
      {% for label, messages in app.flashes(['success', 'fail']) %}
           {% for message in messages %}
                <div class="flash-{{ label }}">
@@ -29,4 +30,5 @@
           {% endfor %}
      </table>
      <a class="link" href="{{ path('admin.doctor_add') }}">Dodaj nowego lekarza</a>
+     </div>
 {% endblock content %}
