--- a/templates/admin_panel/clinic/index.html.twig
+++ b/templates/admin_panel/clinic/index.html.twig
@@ -33,7 +33,7 @@
         </tr>
     {% endfor %}
     </table>
-    <div class="modal" id="modalOpen">
+    <div class="modal" id="modalWindow">
         <div class="modal-content">
           <span id="close" class="close">&times;</span>
           {{ include('admin_panel/clinic/_form.html.twig') }}
