--- a/templates/admin_panel/users/edit.html.twig
+++ b/templates/admin_panel/users/edit.html.twig
@@ -16,7 +16,7 @@
         {{ include('admin_panel/users/_form.html.twig') }}
        
     </div>
-    <div class="modal" id="modalChangePwd">
+    <div class="modal" id="modalWindow">
       <div class="modal-content">
         <span id="close" class="close">&times;</span>
         {{ include('admin_panel/users/_change_pwd_form.html.twig') }}
